[tool.poetry]
name = "cn101"
version = "0.1.0"
description = "A python based chinese character processor"
authors = ["Jun Ru Chen <junru.chen.2007@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"
torch = "^1.11.0"
torchvision = "^0.12.0"
easyocr = "^1.4.2"
gTTS = "^2.2.4"
playsound = "1.2.2"
deep-translator = "^1.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
